--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
 
+
+body {
+  padding-top: 54px;
+  
+	
+  }
+  
+  p.ex1 {
+    padding-right: 550px;
+}
+
+	img.round{
+		border-radius: 50%
+	}
+
+
+
+
+
+
+
