--- a/style.css
+++ b/style.css
@@ -3,20 +3,29 @@
 body {
   padding-top: 54px;
   
-	
-  }
   
-  p.ex1 {
-    padding-right: 550px;
-}
+  }
 
 	img.round{
 		border-radius: 50%
 	}
 
+@media (min-width: 992px) {
+  body {
+    padding-top: 56px;
+  }
+}
 
+.business-header {
+  height: 50vh;
+  min-height: 300px;
+  background: url('http://placehold.it/1920x400') center center no-repeat scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
 
-
-
-
-
+.card {
+  height: 100%;
+}
