--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2604,6 +2604,7 @@
 				border-radius: 100%;
 				display: block;
 				width: 10em;
+				height: 10em;
 			}
 
 		@media screen and (max-width: 1280px) {
